Fix z-index

--- a/app/assets/stylesheets/common/jquery.ui.dialog.css
+++ b/app/assets/stylesheets/common/jquery.ui.dialog.css
@@ -7,7 +7,7 @@
  *
  * http://docs.jquery.com/UI/Dialog#theming
  */
-.ui-dialog { position: absolute; padding: .2em; width: 300px; overflow: visible; z-index: 10000 !important; }
+.ui-dialog { position: absolute; padding: .2em; width: 300px; overflow: visible; z-index: 10001 !important; }
 .ui-dialog .ui-dialog-titlebar { padding: .4em 1em; position: relative;  }
 .ui-dialog .ui-dialog-title { float: left; margin: .1em 16px .1em 0; }
 .ui-dialog .ui-dialog-titlebar-close { position: absolute; background: url("/assets/common/close_dialog.png") no-repeat; right: -12px; top: 75%; width: 30px; margin: -10px 0 0 0; padding: 0; height: 30px; z-index: 10; }
